--- a/roles/bird/tasks/main.yml
+++ b/roles/bird/tasks/main.yml
@@ -7,6 +7,7 @@
   with_items:
     - { regexp: "^net.ipv4.ip_forward", line: "net.ipv4.ip_forward = 1"}
     - { regexp: "^net.ipv4.conf.default.rp_filter", line: "net.ipv4.conf.default.rp_filter = 0"}
+    - { regexp: "^net.ipv4.tcp_syncookies", line: "net.ipv4.tcp_syncookies = 0"}
   tags:
     - enable_routing
 
